test/language/spec/syntax/invalid/missing_rparen.topo
// TEST: missing closing parenthesis
// EXPECT-ERROR: expected

namespace app {
  public:
    void run(;
}
